<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Guidebee Tricorder</string>
    <string name="search">Search</string>
    <string name="directions">Directions</string>
    <string name="mapmode">Map mode</string>
    <string name="mylocation">My Location</string>
    <string name="clearmap">Clear Map</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="addressSearch">Address</string>
    <string name="localSearch">Local</string>
    <string name="latitudeSearch">Latitude</string>
    <string name="ipSearch">IP</string>
    <string name="findaddresshint">input search content</string>
    <string name="cancel">Cancel</string>
    <string name="inputstreetname">Input Street name like James st</string>
    <string name="searchGoto">Goto</string>
    <string name="favorite">Favorite</string>
    <string name="searchinprogress">Please wait while searching...</string>
    <string name="searchnoresult">No result found</string>
    <string-array name="map_type_array">
        <item>Google Map</item>
        <item>Google Satellite Map</item>
        <item>Google Map China</item>
        <item>Bing Map</item>
        <item>Bing Satellite Map</item>
        <item>Bing Map China</item>
        <item>MapAbc Map China</item>
        <item>OpenStreet Map</item>
        <item>Yahoo Map</item>
    </string-array>
    <string name="startpoint">My Location</string>
    <string name="endpoint">End Point:</string>
    <string name="drive">Drive</string>
    <string name="walk">Walk</string>
    <string name="getdirection">Get Direction</string>
    <string name="go_to">Go to</string>
    <string name="map">Map</string>
    <string name="km">Km</string>
    <string name="device">Device</string>
    <string name="viewroute">View Route</string>
    <string name="turnright">Turn right</string>
    <string name="turnleft">Turn left</string>
    <string name="directionfromhere">Directions from here</string>
    <string name="zoomin">Zoom in</string>
    <string name="centermaphere">Center map here</string>
    <string name="whatshere">What\'s here</string>
    <string name="directiontohere">Directions to here</string>
    <string name="zoomout">Zoom out</string>
    <string name="nodevice">No Device</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="deviceno">Device Number</string>
    <string name="devicename">Device Name</string>
    <string name="ok">OK</string>
    <string name="devicecommand">Command</string>
    <string name="deviceinfo">Device Info</string>
    <string name="devicelocationlist">Location</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="clear">Clear</string>
    <string name="number">No</string>
    <string name="name">Name</string>
    <string name="imei">IMEI</string>
    <string name="powerlevel">Power</string>
    <string name="phonenumber">Phone number</string>
    <string name="inputphonenumber">Please input this phone number</string>
    <string name="selectmapmode">Please select map mode</string>
    <string name="mapzoom">Zoom Level</string>
    <string name="selectmaplevel">Please select map zoom level</string>
    <string name="mapcenter">Map center location</string>
    <string name="inputmapcenter">Please input location of map center</string>
    <string name="chinamapoffset">Adjust China map position</string>
    <string name="parameter">Parameters</string>
    <string name="command">Command</string>
    <string name="masterdeviceno">Master device no</string>
    <string name="inputmasterdeivceno">Please input master device no</string>
    <string name="reportlocation">Report Location</string>
</resources>
