<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtStartAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/startpoint"
            android:imeOptions="actionNext"
            android:singleLine="true" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtEndAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endpoint"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dip" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioDrive"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioDrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/drive" />

            <RadioButton
                android:id="@+id/radioWalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/walk" />
        </RadioGroup>
        <TextView
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dip" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btnViewRoute"
                style="@style/ImageButton"
                android:src="@drawable/viewroute" />

            <TextView
                style="@style/ImageButtonTextView"
                android:text="@string/viewroute" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btnGetDirection"
                style="@style/ImageButton"
                android:src="@drawable/getdirection" />

            <TextView
                style="@style/ImageButtonTextView"
                android:text="@string/getdirection" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>